--- a/Text_Representation_and_Classification_Tutorial_.ipynb
+++ b/Text_Representation_and_Classification_Tutorial_.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ndams55/Text-Representation-and-Classification-/blob/main/Text_Representation_and_Classification_Tutorial_.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "YvDEiVK-ghnY"
       },
       "source": [
@@ -472,7 +482,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 178
+          "height": 161
         },
         "id": "uYwK_79-AvjW",
         "outputId": "8f24cc62-62c7-47e2-d261-3d7a3ea1f9e3"
@@ -502,7 +512,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 125
+          "height": 107
         },
         "id": "MteeFKacp2bH",
         "outputId": "895f904b-3861-4e4e-f3da-ee488c744d33"
@@ -3976,11 +3986,11 @@
         "        self.n_classes = len(np.unique(y))\n",
         "        self.n_features = X.shape[1]\n",
         "        \n",
-        "        # calculate P(y), the probability of observing any message of class y\n",
+        "        # calculate P(y), \n",
         "        prior_class = y_counts / np.sum(y_counts)\n",
         "        self.log_prior_class = np.log(prior_class).reshape(-1,1)\n",
         "        \n",
-        "        # calculate P(x|y), the probability of observing message x given it is class y\n",
+        "        # calculate P(x|y), \n",
         "        prob_x_given_y = np.zeros([self.n_classes, self.n_features])\n",
         "        \n",
         "        # for each class of y\n",
@@ -3991,10 +4001,10 @@
         "            #X_filtered = X[(y == i), :]\n",
         "            X_label = X[(y == i)]\n",
         "            \n",
-        "            # get number of messages of each word appears in ( P(x and y) )\n",
+        "            # ( P(x and y) )\n",
         "            numerator = (X_label.sum(axis = 0) + self.alpha)\n",
         "                        \n",
-        "            # get number messages in class y (scalar) ( P(y) )\n",
+        "            # ( P(y) )\n",
         "            denominator = (X_label.shape[0] + 2 * self.alpha)\n",
         "            \n",
         "            # P(x|y) = P(x and y) / P(y)\n",
@@ -4321,7 +4331,8 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "gpuClass": "standard",
     "kernelspec": {
