Text Representation and Classification work

--- a/Text_Representation_and_Classification_Tutorial.ipynb
+++ b/Text_Representation_and_Classification_Tutorial.ipynb
@@ -1,15 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "YvDEiVK-ghnY"
-      },
-      "source": [
-        "# About the notebook"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
@@ -22,7 +13,7 @@
         "id": "QDzm1mfyWkbq",
         "outputId": "cd033f50-de7c-4ade-8a17-6426c5a458f2"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -53,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -100,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "keM_LmiNU5TB"
       },
@@ -118,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {
         "id": "Lso_Zja-g5xn"
       },
@@ -129,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -287,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -326,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -363,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -401,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
         "id": "NDG0y9xumAft"
       },
@@ -419,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {
         "id": "cdMZEUjvmg_g"
       },
@@ -468,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 73,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -498,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 74,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -530,7 +521,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "metadata": {
         "id": "2OiopZCfKusa"
       },
@@ -541,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -585,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 78,
       "metadata": {
         "id": "SJzo6n2SgaE2"
       },
@@ -596,7 +587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 79,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -635,7 +626,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 81,
       "metadata": {
         "id": "XHLy7EbjU5TF"
       },
@@ -646,7 +637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -702,7 +693,7 @@
       "metadata": {
         "id": "BkP3JpvhBOYz"
       },
-      "execution_count": null,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -724,7 +715,7 @@
       "metadata": {
         "id": "W1v2wMCtlOHf"
       },
-      "execution_count": null,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -740,7 +731,7 @@
         "id": "ln-gHCDqByL_",
         "outputId": "dbae4739-4868-4e2d-9109-b364d1687ce0"
       },
-      "execution_count": null,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -943,7 +934,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 101,
       "metadata": {
         "id": "53NDreYIAkVC"
       },
@@ -954,7 +945,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 102,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3937,12 +3928,12 @@
         "id": "m3TFPK-VtoOP"
       },
       "source": [
-        "# Implementing Gaussian Naive Bayes Class"
+        "# Implementing Bernoulli Naive Bayes Class"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 103,
       "metadata": {
         "id": "wh8vleIA4cpo"
       },
@@ -3956,7 +3947,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 107,
       "metadata": {
         "id": "ba-L2n6vtz9w"
       },
@@ -4150,7 +4141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 108,
       "metadata": {
         "id": "IhDLN5Z9IGid",
         "colab": {
@@ -4198,7 +4189,7 @@
         "id": "RND2hIQCEIBV",
         "outputId": "9fb559aa-4b2d-44d5-e5d0-4a935770975d"
       },
-      "execution_count": null,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4229,7 +4220,7 @@
         "id": "-0r9Ltybc_GN",
         "outputId": "beb295d4-60f4-47be-ad03-3f14d8cdb7d1"
       },
-      "execution_count": null,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4263,7 +4254,7 @@
         "id": "sDnyZuZddBiu",
         "outputId": "6e36feef-ff48-4bd4-cc34-32d774220816"
       },
-      "execution_count": null,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4289,7 +4280,7 @@
         "id": "2XiccqlSdCGP",
         "outputId": "bda28153-c82d-4b42-cde3-af6dc3587f4c"
       },
-      "execution_count": null,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "stream",
